# folder-organizer

./: LICENSE  README.md  pyproject.toml
src/folder_organizer/: __main__.py  core.py
tests/: test_core.py
