[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "folder_organizer"
version = "0.1.0"
description = "A tool that sort folder files by extension."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
test = ["pytest", "ruff"]

[project.scripts]
organize-folder = "folder_organizer.__main__:main"