[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folder_organizer"]

[project]
name = "folder_organizer"
version = "0.1.0"
description = "A tool that sort folder files by extension."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []
project = [
    {name = "Abdul Muhaymen Ali", email = "abdulmuhaymenali@gmail.com"}
]



[project.optional-dependencies]
test = ["pytest", "ruff"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]


[project.scripts]
organize-folder = "folder_organizer.__main__:main"